--- a/commerce_robokassa.info.yml
+++ b/commerce_robokassa.info.yml
@@ -6,7 +6,7 @@ core: 8.x
 dependencies:
   - commerce:commerce_payment
 
-# Information added by Drupal.org packaging script on 2020-01-23
+# Information added by Drupal.org packaging script
 version: '8.x-2.x-dev'
 project: 'commerce_robokassa'
 datestamp: 1579814590
