--- a/commerce_robokassa.info.yml
+++ b/commerce_robokassa.info.yml
@@ -1,12 +1,12 @@
-name: Robokassa payment gateway for Commerce
+name: Robokassa
 type: module
-description: aplha version
+description: Оплата с помощью Robokassa
 package: Commerce (contrib)
 core: 8.x
 dependencies:
   - commerce:commerce_payment
 
-# Information added by Drupal.org packaging script
+# Information added by Drupal.org packaging script on 2020-01-23
 version: '8.x-2.x-dev'
-project: 'commerce_robokassa'
+project: 'robokassa'
 datestamp: 1579814590
